<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <RelativeLayout
        android:id="@+id/check_out_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/divider"
        android:layout_marginTop="@dimen/mediumMargin" >

        <TextView
            android:id="@+id/check_out_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/check_out"
            android:textColor="@android:color/white"
            android:textSize="@dimen/largeFont" />

        <Button
            android:id="@+id/scanBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/check_out_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/mediumMargin"
            android:background="@drawable/rounded_corner_blue"
            android:padding="@dimen/tinyMargin"
            android:text="@string/scan_barcode"
            android:textColor="@android:color/white"
            android:textSize="@dimen/smallFont" />

        <LinearLayout
            android:id="@+id/checkListLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scanBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/mediumMargin"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/smallMargin" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle_bkgd"
                    android:gravity="center"
                    android:text="1"
                    android:layout_marginRight="@dimen/smallMargin"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/tinyFont" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/scan_barcode"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/tinyFont" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/smallMargin" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle_bkgd"
                    android:gravity="center"
                    android:layout_marginRight="@dimen/smallMargin"
                    android:text="2"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/tinyFont" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/scan_card"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/tinyFont" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/smallMargin" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle_bkgd"
                    android:gravity="center"
                    android:layout_marginRight="@dimen/smallMargin"
                    android:text="3"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/tinyFont" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/pay_with_card"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/tinyFont" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/smallMargin" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle_bkgd"
                    android:gravity="center"
                    android:layout_marginRight="@dimen/smallMargin"
                    android:text="4"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/tinyFont" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/bag_go"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/tinyFont" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/bigShoppingCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkListLayout"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/mediumMargin"
            android:layout_marginTop="@dimen/mediumMargin"
            android:scaleType="fitCenter"
            android:src="@drawable/shoppingcart_full" />
    </RelativeLayout>

</merge>