<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <RelativeLayout
        android:id="@+id/ready_to_shop_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/divider"
        android:layout_marginTop="@dimen/mediumMargin" >

        <LinearLayout
            android:id="@+id/check_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0" >

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight=".1"
                android:visibility="invisible" />

            <LinearLayout
                android:id="@+id/connected_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4" >

                <ImageView
                    android:layout_width="@dimen/checkDimen"
                    android:layout_height="@dimen/checkDimen"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/smallMargin"
                    android:scaleType="fitCenter"
                    android:src="@drawable/tick" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/connected"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/card_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4" >

                <ImageView
                    android:layout_width="@dimen/checkDimen"
                    android:layout_height="@dimen/checkDimen"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/smallMargin"
                    android:scaleType="fitCenter"
                    android:src="@drawable/tick" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/card_scanned"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight=".1"
                android:visibility="invisible" />
        </LinearLayout>

        <TextView
            android:id="@+id/readyToShop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/check_layout"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/mediumMargin"
            android:text="@string/ready_to_shop"
            android:textColor="@android:color/white"
            android:textSize="@dimen/titleFont"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/readyToShop"
            android:layout_marginTop="@dimen/mediumMargin"
            android:weightSum="1.0" >

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight=".1"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4" >

                <Button
                    android:id="@+id/offers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_blue"
                    android:padding="@dimen/tinyMargin"
                    android:text="@string/view_my_offers"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/smallFont" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4" >

                <Button
                    android:id="@+id/readyToShopBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_blue"
                    android:padding="@dimen/tinyMargin"
                    android:text="@string/ready_to_shop"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/smallFont" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight=".1"
                android:visibility="invisible" />
        </LinearLayout>

        <ImageView
            android:id="@+id/bigShoppingCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttons"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/mediumMargin"
            android:scaleType="fitCenter"
            android:src="@drawable/shoppingcart_empty" />
    </RelativeLayout>

</merge>